--- a/CFM/app/src/main/res/layout/activity_login.xml
+++ b/CFM/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Não possui conta? Cadstre-se"
+            android:text="Não possui conta? Cadastre-se"
             android:textColor="#FF6F00"
             android:textSize="20sp"
             android:textStyle="bold" />
