--- a/CFM/app/src/main/res/layout/activity_cadastro.xml
+++ b/CFM/app/src/main/res/layout/activity_cadastro.xml
@@ -18,19 +18,32 @@
             android:layout_gravity="start"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="12dp"
-            android:text="Login"
+            android:text="Cadastro"
             android:textColor="#FF6F00"
             android:textSize="45sp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/imgLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="298dp"
+            android:layout_width="302dp"
+            android:layout_height="235dp"
             android:layout_marginBottom="24dp"
             android:contentDescription="Logo da família"
             android:scaleType="fitCenter"
             android:src="@drawable/familia" />
+
+        <!-- EMAIL -->
+        <EditText
+            android:id="@+id/editTextNome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/edit_text"
+            android:hint="Nome"
+            android:padding="10dp"
+            android:textColor="#000000"
+            android:textColorHighlight="#C51F1F"
+            android:textStyle="bold" />
 
         <!-- EMAIL -->
         <EditText
@@ -57,14 +70,14 @@
             android:padding="10dp"
             android:textStyle="bold" />
 
-        <!-- BOTÃO ENTRAR -->
+        <!-- BOTÃO CADASTRAR -->
         <Button
-            android:id="@+id/btnEntrar"
+            android:id="@+id/btnCadastrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:backgroundTint="#FF6F00"
-            android:text="Entrar"
+            android:text="Cadastrar"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
 
@@ -74,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Não possui conta? Cadastre-se"
+            android:text="Já possui conta? Faça o Login"
             android:textColor="#FF6F00"
             android:textSize="20sp"
             android:textStyle="bold" />
