--- a/CFM/app/src/main/res/layout/activity_tela_intelectual.xml
+++ b/CFM/app/src/main/res/layout/activity_tela_intelectual.xml
@@ -1,7 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#E6F5FF"
+    tools:context=".TelaIntelectual">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <!-- Título -->
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#A404A4"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="INTELECTUAIS"
+            android:textColor="#ffffff"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <!-- Texto explicativo -->
+        <TextView
+            android:id="@+id/textoExplicativo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Deficiências intelectuais, não são doenças, mas variações neurológicas que influenciam o comportamento, a atenção e a sensibilidade."
+            android:textSize="16sp"
+            android:paddingTop="12dp"
+            android:textColor="#333333" />
+
+        <!-- Cards com botões -->
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alignmentMode="alignMargins"
+            android:columnCount="2"
+            android:columnOrderPreserved="false"
+            android:paddingTop="16dp"
+            android:rowCount="2"
+            android:useDefaultMargins="true">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="192dp"
+                android:layout_columnWeight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="DOWN"
+                    android:textColor="#A404A4"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+
+                <Button
+                    android:layout_width="126dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#A404A4"
+                    android:onClick="abrirDOWN"
+                    android:text="Clique e saiba mais"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="7dp"
+                android:layout_height="186dp"
+                android:layout_columnWeight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="CRI"
+                    android:textColor="#A404A4"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+
+                <Button
+                    android:layout_width="126dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#A404A4"
+                    android:onClick="abrirCRI"
+                    android:text="Clique e saiba mais"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="ANGELMAN"
+                    android:textColor="#A404A4"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_width="126dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#A404A4"
+                    android:onClick="abrirAngelman"
+                    android:text="Clique e saiba mais"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="192dp"
+                android:layout_columnWeight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="WILLIAMS"
+                    android:textColor="#A404A4"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_width="126dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#A404A4"
+                    android:onClick="abrirWilliams"
+                    android:text="Clique e saiba mais"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+
+        </GridLayout>
+
+    </LinearLayout>
+</ScrollView>
