--- a/CFM/app/src/main/res/layout/activity_williams.xml
+++ b/CFM/app/src/main/res/layout/activity_williams.xml
@@ -4,39 +4,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     android:background="#ECEFF4"
+    android:fillViewport="true"
     android:clipToPadding="false"
-    android:paddingBottom="10dp">
+    android:paddingBottom="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#C9FFFA"
-        android:fitsSystemWindows="true">
+        android:background="#D9C3FF">
+
+        <!-- Título -->
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="#D9C3FF" />
 
         <TextView
             android:id="@+id/tvTitle"
-            android:layout_width="416dp"
+            android:layout_width="0dp"
             android:layout_height="70dp"
-            android:background="#18D4DA"
-            android:gravity="center_horizontal"
-            android:paddingTop="20dp"
-            android:shadowColor="#55000000"
-            android:shadowDx="0"
-            android:shadowDy="1"
-            android:shadowRadius="1"
-            android:text="AMPUTAÇÃO"
+            android:layout_marginTop="27.5dp"
+            android:background="#9C27B0"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:text="SÍNDROME DE WILLIAMS"
             android:textColor="#000000"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Card 1 -->
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardAmputacao"
+            android:id="@+id/card1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -58,11 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="6dp"
-                    android:shadowColor="#55000000"
-                    android:shadowDx="0"
-                    android:shadowDy="1"
-                    android:shadowRadius="1"
-                    android:text="Amputação"
+                    android:text="Síndrome de Williams"
                     android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -71,25 +70,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginBottom="6dp"
-                    android:background="#18D4DA" />
+                    android:background="#9C27B0" />
 
                 <TextView
                     android:id="@+id/tvContent1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:shadowColor="#22000000"
-                    android:shadowDx="0"
-                    android:shadowDy="1"
-                    android:shadowRadius="1"
-                    android:text="A amputação é uma jornada desafiadora, mas não define quem você é. É um processo de adaptação física, emocional e espiritual, onde encontrar apoio e aceitar ajuda são essenciais. Cada passo diante é uma vitória, fortalecendo sua determinação e revelando novas perspectivas de vida."
+                    android:text="Cuidar de alguém com síndrome de Williams é uma jornada desafiante e preciosa. Os cuidadores, com amor e dedicação, celebram cada pequena conquista. Crianças com a síndrome são afetuosas e sociáveis com os outros, trazendo alegria. O apoio de familiares, amigos e profissionais é vital. Cada progresso reflete o cuidado investido. Apesar dos desafios, essa jornada é cheia de momentos de alegria, destacando a importância da empatia e da diversidade."
                     android:textColor="#333333"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Card 2 -->
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardOQueE"
+            android:id="@+id/card2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -100,7 +96,7 @@
             app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardAmputacao">
+            app:layout_constraintTop_toBottomOf="@id/card1">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -113,10 +109,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="6dp"
-                    android:shadowColor="#55000000"
-                    android:shadowDx="0"
-                    android:shadowDy="1"
-                    android:shadowRadius="1"
                     android:text="O que é?"
                     android:textColor="#000000"
                     android:textSize="20sp"
@@ -126,23 +118,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginBottom="6dp"
-                    android:background="#18D4DA" />
+                    android:background="#9C27B0" />
 
                 <TextView
                     android:id="@+id/tvContent2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:shadowColor="#22000000"
-                    android:shadowDx="0"
-                    android:shadowDy="1"
-                    android:shadowRadius="1"
-                    android:text="Amputação é a remoção cirúrgica parcial ou total de um membro do corpo humano devido a condições médicas como lesões traumáticas graves, doenças vasculares avançadas, infecções ou tumores. O objetivo é melhorar a qualidade de vida, aliviar a dor e prevenir complicações sérias."
+                    android:text="A síndrome de Williams é uma doença caracterizada por face de gnomo ou fadinha”, nariz pequeno e empinado, cabelos encaracolados, lábios cheios, dentes pequenos e sorriso frequente. Estas crianças normalmente têm problemas de coordenação e equilíbrio, apresentando um atraso psicomotor. Seu comportamento é sociável e comunicativo, utilizando expressões faciais, contatos visuais e gestos na comunicação."
                     android:textColor="#333333"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Layout dos botões -->
         <LinearLayout
             android:id="@+id/layoutButtons"
             android:layout_width="0dp"
@@ -154,7 +143,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardOQueE">
+            app:layout_constraintTop_toBottomOf="@id/card2">
 
             <Button
                 android:id="@+id/btnMaterial1"
@@ -162,14 +151,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
-                android:backgroundTint="#197F87"
+                android:backgroundTint="#009999"
                 android:gravity="center"
-                android:padding="8dp"
-                android:shadowColor="#55000000"
-                android:shadowDx="0"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="Material 1: Tipos de Amputações\nCausas e Níveis"
+                android:text="Material 1\nManejo comportamental"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
 
@@ -179,14 +163,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
-                android:backgroundTint="#197F87"
+                android:backgroundTint="#009999"
                 android:gravity="center"
-                android:padding="8dp"
-                android:shadowColor="#55000000"
-                android:shadowDx="0"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="Material 2: Guia de Orientações\npara Paciente Amputado"
+                android:text="Material 2\nAssociação Brasileira da Síndrome de Williams"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
 
@@ -196,18 +175,14 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
-                android:backgroundTint="#218A92"
+                android:backgroundTint="#009999"
                 android:gravity="center"
-                android:padding="8dp"
-                android:shadowColor="#55000000"
-                android:shadowDx="0"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:text="Material 3: Material de Apoio\nDeficiência Física"
+                android:text="Material 3\nSíndrome de Williams\nFIOCRUZ"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
         </LinearLayout>
 
+        <!-- Botão inferior -->
         <Button
             android:id="@+id/btnForum"
             android:layout_width="0dp"
@@ -217,20 +192,14 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="48dp"
             android:backgroundTint="#001BFF"
-            android:shadowColor="#55000000"
-            android:shadowDx="0"
-            android:shadowDy="1"
-            android:shadowRadius="1"
             android:text="Clique aqui para entrar no fórum!"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layoutButtons"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toBottomOf="@id/layoutButtons" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
