--- a/CFM/app/src/main/res/layout/activity_amputacao.xml
+++ b/CFM/app/src/main/res/layout/activity_amputacao.xml
@@ -50,6 +50,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -105,6 +106,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -217,6 +219,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="48dp"
             android:backgroundTint="#001BFF"
+            android:onClick="irForum"
             android:shadowColor="#55000000"
             android:shadowDx="0"
             android:shadowDy="1"
