--- a/CFM/app/src/main/res/layout/activity_autismo.xml
+++ b/CFM/app/src/main/res/layout/activity_autismo.xml
@@ -23,7 +23,7 @@
             android:background="#FF00E6"
             android:gravity="center"
             android:paddingTop="5dp"
-            android:text="Autismo"
+            android:text="AUTISMO"
             android:textColor="#000000"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -47,6 +47,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -95,6 +96,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
