--- a/CFM/app/src/main/res/layout/activity_nanismo.xml
+++ b/CFM/app/src/main/res/layout/activity_nanismo.xml
@@ -49,6 +49,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -104,6 +105,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -217,6 +219,7 @@
             android:layout_marginBottom="48dp"
             android:backgroundTint="#001BFF"
             android:shadowColor="#55000000"
+            android:onClick="irForum"
             android:shadowDx="0"
             android:shadowDy="1"
             android:shadowRadius="1"
