--- a/CFM/app/src/main/res/layout/activity_poliomielite.xml
+++ b/CFM/app/src/main/res/layout/activity_poliomielite.xml
@@ -51,6 +51,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -107,6 +108,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="12dp">
 
@@ -141,7 +143,7 @@
                     android:text="A poliomielite, também chamada de pólio ou paralisia infantil, é uma doença contagiosa aguda causada por um vírus que vive no intestino, chamado poliovírus, que pode infectar crianças e adultos por meio do contato direto com fezes ou secreções eliminadas pela boca das pessoas infectadas e provocar ou não paralisia. Nos casos graves, em que acontecem as paralisias musculares, os membros inferiores são os mais atingidos."
                     android:textColor="#333333"
                     android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -226,6 +228,7 @@
             android:shadowDy="1"
             android:shadowRadius="1"
             android:text="Clique aqui para entrar no fórum!"
+            android:onClick="irForum"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
