--- a/CFM/app/src/main/res/layout/activity_autismo.xml
+++ b/CFM/app/src/main/res/layout/activity_autismo.xml
@@ -191,6 +191,7 @@
             android:text="Clique aqui para entrar no fórum!"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
+            android:onClick="irForum"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
