--- a/CFM/app/src/main/res/layout/activity_surdez.xml
+++ b/CFM/app/src/main/res/layout/activity_surdez.xml
@@ -185,6 +185,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:onClick="irForum"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="48dp"
             android:backgroundTint="#001BFF"
